--- a/templates/base.html
+++ b/templates/base.html
@@ -3,21 +3,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>
             {% block head_title %}
             {% endblock %}
-        <title>
+        </title>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+        <link rel="icon" href="{% static 'images/twitter_socialnetwork_20007.ico' %}"/>
 
         {% block extra_head %}
         {% endblock %}
 
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-        <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">
-        <link href="{% static 'css/style.min.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"/>
+        <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet"/>
+        <link href="{% static 'css/style.min.css' %}" rel="stylesheet"/>
         <style type="text/css">
             html,
             body,
